# entropy-loop-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  demo.hero.tape  demo.tape  pyproject.toml
.github/workflows/: action-self-test.yml  ci.yml  publish.yml
docs/: agent-adapters.md  architecture.md  ci-evidence.md  demo.md  github-actions.md  html-report.md  launch-checklist.md  memory-policy.md  philosophy.md  public-private-boundary.md  pypi-checklist.md  regression-packs.md  regression-triage.md  release-checklist.md  reliability-model.md  research-influences.md  roadmap.md  stability-contract.md  stabilization-v0.3.1.md
docs/assets/: demo-v1.tape
docs/assets/haetae/: haetae_original.json
docs/research/: design-primitives.md  failure-compiler-theory.md  paper-primitive-matrix.md  papers.md  public-private-boundary.md  reading-roadmap.md
examples/: agent_adapter_ci.py  baseline_regression_report.json  basic_entropy_loop.py  current_regression_report.json  failure_compiler_demo.py  json_agent_agent.py  json_agent_guard.pack.json  json_agent_guard.py  memory_policy_guard.py  regression_pack_ci.py  regression_triage_demo.py  triage_report.md
src/entropy_loop_core/: __init__.py  agent_adapter.py  ci_evidence.py  cli.py  contract.py  evaluation.py  html_report.py  lessons.py  loop.py  memory.py  memory_policy.py  regression.py  regression_pack.py  replay.py  triage.py  types.py  verification.py
tests/: test_action_self_test_workflow.py  test_agent_adapter.py  test_ci_evidence.py  test_cli.py  test_contract.py  test_docs.py  test_evaluation.py  test_html_report.py  test_lessons.py  test_loop.py  test_memory.py  test_memory_policy.py  test_regression.py  test_regression_pack.py  test_replay.py  test_triage.py  test_types.py  test_verification.py
