[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entropy-loop-core"
version = "0.4.0"
description = "A Failure Compiler for AI agents: turn failed outputs into lessons, evaluation summaries, and replayable regression cases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "koreaelonmusk" }]
keywords = [
    "ai",
    "agents",
    "reliability",
    "verification",
    "failure-compiler",
    "regression",
    "retry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/koreaelonmusk/entropy-loop-core"
Repository = "https://github.com/koreaelonmusk/entropy-loop-core"
Issues = "https://github.com/koreaelonmusk/entropy-loop-core/issues"
Changelog = "https://github.com/koreaelonmusk/entropy-loop-core/blob/main/CHANGELOG.md"

[project.scripts]
entropy-loop = "entropy_loop_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/entropy_loop_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
